--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@ ExportedObj/
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+# Builds
+*.apk
+*.unitypackage
+*.app*
+BuildWindows_*
+
+*.zip
